minor spacing fix for log pagination for mobile

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -838,4 +838,7 @@ body.mobileMode {
     #settingsAddresses {
         display: none;
     }
+    .pm_buttons.paginator {
+        margin: 0 1rem;
+    }
 }
